force-app/main/default/objects/Quality_Assessment__c/fields/Accountability_and_Next_Steps__c.field-meta.xml
<CustomField>
    <fullName>Accountability_and_Next_Steps__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Accountability and Next Steps outcome to be captured by the user based on the call review</description>
    <label>Accountability and Next Steps</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Evaluation_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Quality_Assessment_Rating</valueSetName>
    </valueSet>
</CustomField>