force-app/main/default/objects/Quality_Assessment__c/fields/Accountability_and_Next_Steps_Comments__c.field-meta.xml
<CustomField>
    <fullName>Accountability_and_Next_Steps_Comments__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>A field for the analyst to capture the Accountability and Next Steps Comments</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Accountability and Next Steps Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>