force-app/main/default/objects/Quality_Assessment__c/fields/Accountability_Next_Steps_Top_Line__c.field-meta.xml
<CustomField>
    <fullName>Accountability_Next_Steps_Top_Line__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Multi-select values for the Accountability &amp; Next Steps.</description>
    <label>Accountability &amp; Next Steps Top Line</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Providing Clear Next Steps</fullName>
            </value>
            <value>
                <fullName>Next Issue Avoidance</fullName>
            </value>
            <value>
                <fullName>Effective Case Management</fullName>
            </value>
            <value>
                <fullName>Interaction Resolution</fullName>
            </value>
            <value>
                <fullName>Clear and Relevant Case Notes</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>