force-app/main/default/objects/Quality_Assessment__c/fields/Accurate_information_in_final_response__c.field-meta.xml
<CustomField>
    <fullName>Accurate_information_in_final_response__c</fullName>
    <complianceGroup>Integrity - Trusted;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <description>Accurate information in final response</description>
    <inlineHelpText>In our final response, (verbal or written), the decision/s we made and the reasons we gave were accurate.</inlineHelpText>
    <label>Accurate information in final response?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Met</fullName>
            </value>
            <value>
                <fullName>Not met</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>