force-app/main/default/objects/Quality_Assessment__c/fields/Action_Momentum_Top_Line__c.field-meta.xml
<CustomField>
    <fullName>Action_Momentum_Top_Line__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Multi-select values for the Action &amp; Momentum.</description>
    <label>Action &amp; Momentum Top Line</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Appropriate Solutions</fullName>
            </value>
            <value>
                <fullName>Coaching / Educating the Customer</fullName>
            </value>
            <value>
                <fullName>Reducing Customer Time / Effort</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Relevant Process Completed Correctly</fullName>
            </value>
            <value>
                <fullName>Complete &amp; Relevant Information</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>