force-app/main/default/objects/Quality_Assessment__c/fields/Action_Taken__c.field-meta.xml
<CustomField>
    <fullName>Action_Taken__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Compliance representative/Coach Lead would add the actions they took in addressing the compliance review</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Completed by coach lead if remedial action is required</inlineHelpText>
    <label>Action Taken</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>