force-app/main/default/objects/Quality_Assessment__c/fields/Actions_and_Momentum__c.field-meta.xml
<CustomField>
    <fullName>Actions_and_Momentum__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Actions and Momentum outcome to be captured by the user based on the call review</description>
    <label>Actions and Momentum</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Evaluation_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Quality_Assessment_Rating</valueSetName>
    </valueSet>
</CustomField>