force-app/main/default/objects/Quality_Assessment__c/fields/Actions_and_Momentum_Comments__c.field-meta.xml
<CustomField>
    <fullName>Actions_and_Momentum_Comments__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>A field for the analyst to capture the Actions and Momentum  Comments</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Actions and Momentum Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>