force-app/main/default/objects/Quality_Assessment__c/fields/Actions_Completed__c.field-meta.xml
<CustomField>
    <fullName>Actions_Completed__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Actions Completed</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Actions Completed</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>