force-app/main/default/objects/Quality_Assessment__c/fields/Addressed_info_req_s_basic_accts_etc__c.field-meta.xml
<CustomField>
    <fullName>Addressed_info_req_s_basic_accts_etc__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Resolution Assessment question 21</description>
    <inlineHelpText>Did we give information requested, refer customers potentially eligible for basic accounts, and refer deceased notifications?</inlineHelpText>
    <label>Addressed info req&apos;s, basic accts etc.?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Met</fullName>
            </value>
            <value>
                <fullName>Not Met</fullName>
            </value>
            <value>
                <fullName>Not Met (Out of Case Handler’s control)</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>