force-app/main/default/objects/Quality_Assessment__c/fields/Advice_Best_Interest_Duty__c.field-meta.xml
<CustomField>
    <fullName>Advice_Best_Interest_Duty__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <description>Advice supplement assessment question:  Best Interests Duty</description>
    <label>Best interests duty</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>QA_V2_Ratings</valueSetName>
    </valueSet>
</CustomField>