force-app/main/default/objects/Quality_Assessment__c/fields/Advice_Best_Interests_Duty_Comments__c.field-meta.xml
<CustomField>
    <fullName>Advice_Best_Interests_Duty_Comments__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <description>Advice supplement assessment comments:  Best Interests Duty</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Best interests duty comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>