force-app/main/default/objects/Quality_Assessment__c/fields/Advice_Cust_Understanding_Scope_Comments__c.field-meta.xml
<CustomField>
    <fullName>Advice_Cust_Understanding_Scope_Comments__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <description>Advice supplement assessment comments:  Customer Understanding of Scope</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Customer understanding of scope comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>