force-app/main/default/objects/Quality_Assessment__c/fields/Advice_Customer_understanding_of_scope__c.field-meta.xml
<CustomField>
    <fullName>Advice_Customer_understanding_of_scope__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <description>Advice supplement assessment question:  Customer understanding of scope</description>
    <label>Customer understanding of scope</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>QA_V2_Ratings</valueSetName>
    </valueSet>
</CustomField>