force-app/main/default/objects/Quality_Assessment__c/fields/Advice_Decline_advice_and_refer__c.field-meta.xml
<CustomField>
    <fullName>Advice_Decline_advice_and_refer__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <description>Advice supplement assessment question:  Decline advice and refer</description>
    <label>Decline advice and refer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>QA_V2_Ratings</valueSetName>
    </valueSet>
</CustomField>