force-app/main/default/objects/Quality_Assessment__c/fields/Advice_Decline_Advice_and_Refer_Comments__c.field-meta.xml
<CustomField>
    <fullName>Advice_Decline_Advice_and_Refer_Comments__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <description>Advice supplement assessment comments:  Decline Advice and Refer</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Decline advice and refer comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>