force-app/main/default/objects/Quality_Assessment__c/fields/Advice_Define_Scope__c.field-meta.xml
<CustomField>
    <fullName>Advice_Define_Scope__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Advice supplement assessment question:  Define Scope</description>
    <label>Define scope</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>QA_V2_Ratings</valueSetName>
    </valueSet>
</CustomField>