force-app/main/default/objects/Quality_Assessment__c/fields/Advice_Dispute_Resolution_Comments__c.field-meta.xml
<CustomField>
    <fullName>Advice_Dispute_Resolution_Comments__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <description>Advice supplement assessment comments:  Dispute Resolution</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Dispute resolution comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>