force-app/main/default/objects/Quality_Assessment__c/fields/Advice_Fact_Find__c.field-meta.xml
<CustomField>
    <fullName>Advice_Fact_Find__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Advice supplement assessment question: Fact Find</description>
    <label>Fact find</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>QA_V2_Ratings</valueSetName>
    </valueSet>
</CustomField>