force-app/main/default/objects/Quality_Assessment__c/fields/Advice_Fact_Find_Comments__c.field-meta.xml
<CustomField>
    <fullName>Advice_Fact_Find_Comments__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <description>Advice supplement assessment comments:  Fact Find</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Fact find comments</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>