force-app/main/default/objects/Quality_Assessment__c/fields/Advice_Incomplete_Inaccurate_warning__c.field-meta.xml
<CustomField>
    <fullName>Advice_Incomplete_Inaccurate_warning__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <description>Advice supplement assessment question:  Incomplete / Inaccurate Warning</description>
    <label>Incomplete / inaccurate warning</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>QA_V2_Ratings</valueSetName>
    </valueSet>
</CustomField>