force-app/main/default/objects/Quality_Assessment__c/fields/Advice_Initial_Contact_Comments__c.field-meta.xml
<CustomField>
    <fullName>Advice_Initial_Contact_Comments__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <description>Advice supplement assessment comments:  Initial Contact</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Initial contact comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>