force-app/main/default/objects/Quality_Assessment__c/fields/Advice_Limit_scope_of_advice__c.field-meta.xml
<CustomField>
    <fullName>Advice_Limit_scope_of_advice__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <description>Advice supplement assessment question:  Limit scope of advice</description>
    <label>Limit scope of advice</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>QA_V2_Ratings</valueSetName>
    </valueSet>
</CustomField>