force-app/main/default/objects/Quality_Assessment__c/fields/Advice_Limit_scope_of_advice_Comments__c.field-meta.xml
<CustomField>
    <fullName>Advice_Limit_scope_of_advice_Comments__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <description>Advice supplement assessment comments:  Limit scope of advice</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Limit scope of advice comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>