force-app/main/default/objects/Quality_Assessment__c/fields/Advice_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Advice_Outcome__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Advice Outcome Rating (Calculated)</description>
    <label>Advice Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Effective</fullName>
            </value>
            <value>
                <fullName>Almost there</fullName>
            </value>
            <value>
                <fullName>Requirements not met</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>