force-app/main/default/objects/Quality_Assessment__c/fields/Advice_Substantive_Advice_OFSN_Comments__c.field-meta.xml
<CustomField>
    <fullName>Advice_Substantive_Advice_OFSN_Comments__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <description>Advice supplement assessment comments:  Substantive Advice, OFSN</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Substantive advice, OFSN comments</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>