force-app/main/default/objects/Quality_Assessment__c/fields/Advice_Supplement__c.field-meta.xml
<CustomField>
    <fullName>Advice_Supplement__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Is Advice supplement part of Assessment</description>
    <label>Advice Supplement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>