force-app/main/default/objects/Quality_Assessment__c/fields/AFCA_details_provided_in_the_letter__c.field-meta.xml
<CustomField>
    <fullName>AFCA_details_provided_in_the_letter__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Assessment question 5</description>
    <inlineHelpText>Does the final response letter contain AFCA’s details?</inlineHelpText>
    <label>AFCA details provided in the letter?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Met</fullName>
            </value>
            <value>
                <fullName>Not Met</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>