force-app/main/default/objects/Quality_Assessment__c/fields/AI_Evaluation_Id__c.field-meta.xml
<CustomField>
    <fullName>AI_Evaluation_Id__c</fullName>
    <complianceGroup>Integrity_Accurate;Integrity_Trusted;Privacy_Non_Personal_Information;Source - GCP</complianceGroup>
    <description>Unique identifier generated by the A.I. integration (AIDA) to indicate the source of this Evaluation.</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <inlineHelpText>Unique identifier generated by the A.I. integration (AIDA) to indicate the source of this Evaluation.</inlineHelpText>
    <label>AI Evaluation Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>