force-app/main/default/objects/Quality_Assessment__c/fields/Application_ID__c.field-meta.xml
<CustomField>
    <fullName>Application_ID__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to ResidentialLoanApplication to get the related loan application information.</description>
    <label>Application ID</label>
    <referenceTo>ResidentialLoanApplication</referenceTo>
    <relationshipLabel>Quality Assessments</relationshipLabel>
    <relationshipName>Quality_Assessments</relationshipName>
    <type>Lookup</type>
</CustomField>