force-app/main/default/objects/Quality_Assessment__c/fields/Appoinment_Type__c.field-meta.xml
<CustomField>
    <fullName>Appoinment_Type__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Available appointment types.</description>
    <label>Appoinment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Buy &amp; Own a Home</fullName>
            </value>
            <value>
                <fullName>Financial Wellbeing</fullName>
            </value>
            <value>
                <fullName>Test out a Home Loan</fullName>
            </value>
            <value>
                <fullName>Digital Support</fullName>
            </value>
            <value>
                <fullName>Other - Advice</fullName>
            </value>
            <value>
                <fullName>Other - No Advice</fullName>
            </value>
            <value>
                <fullName>Other - Lending</fullName>
            </value>
            <value>
                <fullName>Other - Deposits</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>