force-app/main/default/objects/Quality_Assessment__c/fields/Appropriately_assessed_information__c.field-meta.xml
<CustomField>
    <fullName>Appropriately_assessed_information__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>SUCCESS MEASURE 1 Q3</description>
    <inlineHelpText>We appropriately assessed the reliability and weight of information and/or documents in making our decision.</inlineHelpText>
    <label>Appropriately assessed information?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Met</fullName>
            </value>
            <value>
                <fullName>Not met</fullName>
            </value>
            <value>
                <fullName>Not met (outside CM control)</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>