force-app/main/default/objects/Quality_Assessment__c/fields/Are_our_findings_well_supported__c.field-meta.xml
<CustomField>
    <fullName>Are_our_findings_well_supported__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Assessment question 2</description>
    <inlineHelpText>Does the response set out the reasons for the decision/s by setting out our findings on material questions of fact for each complaint issue and referring to information that supports those findings?</inlineHelpText>
    <label>Are our findings well supported?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Met</fullName>
            </value>
            <value>
                <fullName>Not Met</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>