force-app/main/default/objects/Quality_Assessment__c/fields/Assessment_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Completion_Date__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Updated on change of status to Complete.</description>
    <label>Assessment Completion Date</label>
    <type>DateTime</type>
</CustomField>