force-app/main/default/objects/Quality_Assessment__c/fields/Assessment_Outcome_Status__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Outcome_Status__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Assessment Outcome Status</description>
    <label>Assessment Outcome Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Awaiting Response</fullName>
            </value>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Disputed</fullName>
            </value>
            <value>
                <fullName>Disputed - C&amp;Q review overturned</fullName>
            </value>
            <value>
                <fullName>Disputed - C&amp;Q review upheld</fullName>
            </value>
            <value>
                <fullName>Disputed - C&amp;Q review final</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>C&amp;Q Manager amended original review</fullName>
            </value>
            <value>
                <fullName>C&amp;Q Manager upheld original review</fullName>
            </value>
            <value>
                <fullName>C&amp;Q Manager&apos;s view not accepted</fullName>
            </value>
            <value>
                <fullName>C&amp;Q Manager&apos;s view accepted</fullName>
            </value>
            <value>
                <fullName>C&amp;Q Lead upholds C&amp;Q Manager&apos;s review</fullName>
            </value>
            <value>
                <fullName>C&amp;Q Lead disagrees with C&amp;Q Manager&apos;s review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>