force-app/main/default/objects/Quality_Assessment__c/fields/Assessment_Result__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Result__c</fullName>
    <complianceGroup>Integrity - Trusted;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <description>Assessment Result</description>
    <label>Assessment Result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>Pass with feedback</fullName>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
            <value>
                <fullName>Fail – outside of complaint handler’s control</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>