force-app/main/default/objects/Quality_Assessment__c/fields/Assessment_Result_formula__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Result_formula__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <description>Assessment Result - Auto Calculated</description>
    <formula>IF(
AssessmentOutcomePass__c == true,&apos;Pass&apos;,
IF(AssessmentOutcomeFail__c  == true,&apos;Fail&apos;,
IF(AssessmentOutcomePassFeedback__c == true,&apos;Pass With Feedback&apos;,
IF(AssessmentOutcomeFailOutControl__c == true,&apos;Fail – outside of complaint handler’s control&apos;,&apos;&apos;)
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assessment Result formula</label>
    <type>Text</type>
</CustomField>